@@ -2,12 +2,14 @@
 v1.2.0 "aeraria":
  - make text wrapping not use hyphens
  - make long texts in lists scroll horizontally
+ - fix issue where text search query data would get cut off
  - fix some wrapping issues on korean systems
  - automatically detect Romanian based on system country
  - add French (Canada) translation
  - add Italian translation
  - add Portuguese translation
  - add Korean translation
+ - add searching using a title id
 
 v1.1.0 "aeraria":
  - fix issue where NAND titles wouldn't be reinstallable
